--- a/sesame/index_3.html
+++ b/sesame/index_3.html
@@ -31,6 +31,10 @@
     .wxhBom {
       bottom: 12vw;
     }
+    .splitBox {
+      padding-bottom: 4vw;
+      background-color: black;
+    }
   </style>
 </head>
 
@@ -47,6 +51,7 @@
       <div id="wxh02" class="wxh wxhBom">hxzt3096</div>
     </div>
     <img class="widImg" src="./img/03/05.png" alt="">
+    <div class="splitBox"></div>
   </div>
 </body>
 <script type="text/javascript">
