--- a/sesame/index_5.html
+++ b/sesame/index_5.html
@@ -8,7 +8,7 @@
   <meta name="renderer" content="webkit">
   <meta http-equiv="Cache-Control" content="no-siteapp">
   <meta name="format-detection" content="telephone=no">
-  <title>量价时空战法</title>
+  <title>金春报喜金股名单</title>
   <script type="text/javascript" src="./lib/astock.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.0/clipboard.min.js"></script>
   <link rel="stylesheet" href="./style.css">
@@ -34,7 +34,7 @@
       height: 18vw;
       margin: 0 auto;
       position: absolute;
-      bottom: 11vw;
+      top: 13vw;
       left: 0;
       right: 0;
     }
@@ -53,7 +53,7 @@
 </body>
 <script type="text/javascript">
   bridge.init();
-  bridge.setTitle('量价时空战法');
+  bridge.setTitle('金春报喜金股名单');
   var wxh = bridge.search('wxh') || 'hxzt3096';
   document.getElementById('wxh').innerHTML = wxh;
     // 粘贴事件绑定
