--- a/sesame/index_7.html
+++ b/sesame/index_7.html
@@ -67,35 +67,35 @@ $("#list").myScroll({
           <div class="scroll_box_list">
             <ul class="list" id="list">
               <li class="clearfix" style="margin-top: -119px;">
-                <p> <span class="con4-time">2019-2-19</span> <span>153****6537</span> <span>300142</span> <span>已反馈测评结果</span>
+                <p> <span class="con4-time">2019-2-19</span> <span>153****6537</span> <span>300142</span> <span>已测评</span>
                 </p>
-                <p> <span class="con4-time">2019-2-19</span> <span>138****7536</span> <span>002007</span> <span>已反馈测评结果</span>
+                <p> <span class="con4-time">2019-2-19</span> <span>138****7536</span> <span>002007</span> <span>已测评</span>
                 </p>
-                <p> <span class="con4-time">2019-2-19</span> <span>189****8925</span> <span>601318</span> <span>已反馈测评结果</span>
+                <p> <span class="con4-time">2019-2-19</span> <span>189****8925</span> <span>601318</span> <span>已测评</span>
                 </p>
-                <p> <span class="con4-time">2019-2-19</span> <span>133****6833</span> <span>002515</span> <span>已反馈测评结果</span>
+                <p> <span class="con4-time">2019-2-19</span> <span>133****6833</span> <span>002515</span> <span>已测评</span>
                 </p>
-                <p> <span class="con4-time">2019-2-19</span> <span>133****6235</span> <span>002655</span> <span>已反馈测评结果</span>
+                <p> <span class="con4-time">2019-2-19</span> <span>133****6235</span> <span>002655</span> <span>已测评</span>
                 </p>
-                <p> <span class="con4-time">2019-2-19</span> <span>156****7723</span> <span>600776</span> <span>已反馈测评结果</span>
+                <p> <span class="con4-time">2019-2-19</span> <span>156****7723</span> <span>600776</span> <span>已测评</span>
                 </p>
-                <p> <span class="con4-time">2019-2-19</span> <span>188****6532</span> <span>002828</span> <span>已反馈测评结果</span>
+                <p> <span class="con4-time">2019-2-19</span> <span>188****6532</span> <span>002828</span> <span>已测评</span>
                 </p>
-                <p> <span class="con4-time">2019-2-19</span> <span>158****9853</span> <span>002699</span> <span>已反馈测评结果</span>
+                <p> <span class="con4-time">2019-2-19</span> <span>158****9853</span> <span>002699</span> <span>已测评</span>
                 </p>
-                <p> <span class="con4-time">2019-2-19</span> <span>139****4026</span> <span>000809</span> <span>已反馈测评结果</span>
+                <p> <span class="con4-time">2019-2-19</span> <span>139****4026</span> <span>000809</span> <span>已测评</span>
                 </p>
-                <p> <span class="con4-time">2019-2-19</span> <span>159****6527</span> <span>600576</span> <span>已反馈测评结果</span>
+                <p> <span class="con4-time">2019-2-19</span> <span>159****6527</span> <span>600576</span> <span>已测评</span>
                 </p>
-                <p> <span class="con4-time">2019-2-19</span> <span>131****8865</span> <span>002703</span> <span>已反馈测评结果</span>
+                <p> <span class="con4-time">2019-2-19</span> <span>131****8865</span> <span>002703</span> <span>已测评</span>
                 </p>
-                <p> <span class="con4-time">2019-2-19</span> <span>136****2222</span> <span>002352</span> <span>已反馈测评结果</span>
+                <p> <span class="con4-time">2019-2-19</span> <span>136****2222</span> <span>002352</span> <span>已测评</span>
                 </p>
-                <p> <span class="con4-time">2019-2-19</span> <span>188****3546</span> <span>002023</span> <span>已反馈测评结果</span>
+                <p> <span class="con4-time">2019-2-19</span> <span>188****3546</span> <span>002023</span> <span>已测评</span>
                 </p>
-                <p> <span class="con4-time">2019-2-19</span> <span>150****6732</span> <span>600435</span> <span>已反馈测评结果</span>
+                <p> <span class="con4-time">2019-2-19</span> <span>150****6732</span> <span>600435</span> <span>已测评</span>
                 </p>
-                <p> <span class="con4-time">2019-2-19</span> <span>155****7832</span> <span>002239</span> <span>已反馈测评结果</span>
+                <p> <span class="con4-time">2019-2-19</span> <span>155****7832</span> <span>002239</span> <span>已测评</span>
                 </p>
               </li>
             </ul>
@@ -115,7 +115,7 @@ $("#list").myScroll({
           alt=""><img src="./img/07/p_10.jpg" alt=""><img src="./img/07/p_11.jpg" alt=""></div>
     </div>
     <footer>
-      <p>大连华讯投资股份有限公司</p>
+      <p>上海海能证券投资顾问有限公司</p>
       <p>投资有风险 入市需谨慎</p>
       <p>从事证券投资，请通过合法证券营机构进行购买，<br>
         合法机构名单可到中国证监会网站（www.csrc.gov.cn）查询</p>
@@ -129,15 +129,8 @@ $("#list").myScroll({
     var year = d.getFullYear();
     $('#list .con4-time').html(year + "-" + month + "-" + day);
   </script>
-  <script type="text/javascript">
-    var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-    document.write(unescape("%3Cspan id='cnzz_stat_icon_1261563755'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol +
-      "s95.cnzz.com/z_stat.php%3Fid%3D1261563755%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));
-  </script><span id="cnzz_stat_icon_1261563755"><a href="https://www.cnzz.com/stat/website.php?web_id=1261563755"
-      target="_blank" title="站长统计"><img border="0" hspace="0" vspace="0" src="./img/07/pic1.gif"></a></span>
   <script src="./img/07/z_stat.php" type="text/javascript"></script>
   <script src="./img/07/core.php" charset="utf-8" type="text/javascript"></script>
-
 
   <div id="cli_dialog_div"></div>
   <div class="dialogBg" id="dialogBg">
